# control-de-modelo-3D-usando-gestos-de-las-manos

./: CMakeCache.txt  CMakeLists.txt  README.md  camera  main.cpp  vision
src/: main.cpp
src/vision/: camera.cpp  camera.h  hand_detector.cpp  hand_tracker.h
